--- a/FootballApplication/Views/TeamPoints/Index.cshtml
+++ b/FootballApplication/Views/TeamPoints/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using FootballApplication1.ModelView
-@model List<_pointsServiceViewModel>
+@model List<TeamPointsViewModel>
 @{
     ViewData["Title"] = "Index";
 }
